--- a/app/src/main/res/layout/activity_lab02.xml
+++ b/app/src/main/res/layout/activity_lab02.xml
@@ -16,8 +16,6 @@
     </androidx.gridlayout.widget.GridLayout>
 
     <GridLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/favorites_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,22 +27,27 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:width="0dp"
+            android:onClick="OnBoardSizeButtonClicked"
             android:pointerIcon="context_menu"
             android:text="6 x 6"
             android:textSize="34sp"
+            app:cornerRadius="10dp"
             app:icon="@drawable/baseline_rocket_launch_24"
             app:iconGravity="textTop"
             app:iconPadding="@dimen/icon_padding"
             app:iconSize="48dp" />
+
 
         <Button
             android:id="@+id/main_4_4_board"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:width="0dp"
+            android:onClick="OnBoardSizeButtonClicked"
             android:pointerIcon="context_menu"
             android:text="4 x 4"
             android:textSize="34sp"
+            app:cornerRadius="10dp"
             app:icon="@drawable/baseline_rocket_launch_24"
             app:iconGravity="textTop"
             app:iconPadding="@dimen/icon_padding"
@@ -55,9 +58,11 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:width="0dp"
+            android:onClick="OnBoardSizeButtonClicked"
             android:pointerIcon="context_menu"
             android:text="4 x 3"
             android:textSize="34sp"
+            app:cornerRadius="10dp"
             app:icon="@drawable/baseline_rocket_launch_24"
             app:iconGravity="textTop"
             app:iconPadding="@dimen/icon_padding"
@@ -68,15 +73,16 @@
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:width="0dp"
+            android:onClick="OnBoardSizeButtonClicked"
             android:pointerIcon="context_menu"
             android:text="3 x 2"
             android:textSize="34sp"
+            app:cornerRadius="10dp"
             app:icon="@drawable/baseline_rocket_launch_24"
             app:iconGravity="textTop"
             app:iconPadding="@dimen/icon_padding"
             app:iconSize="48dp" />
 
     </GridLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
